Update env examples with deployment URLs

--- a/backend/env.example
+++ b/backend/env.example
@@ -5,7 +5,7 @@ CSRF_SECRET=change_me_to_another_secure_random_value
 JWT_SECRET=change_me_to_a_jwt_secret
 
 # Database
-DATABASE_URL=postgresql://username:password@host:5432/flavorquest
+DATABASE_URL=postgresql://flavour_quest_postgres_user:zW1QwYAgcSOxhy3WrJMAclaoE2s84ZqW@dpg-d4anmt63jp1c73e8bulg-a.oregon-postgres.render.com/flavour_quest_postgres
 
 # Security / Rate Limiting
 RATE_LIMIT_MAX_REQUESTS=100
