--- a/backend/env.example
+++ b/backend/env.example
@@ -1,22 +1,21 @@
 # Flask Settings
 FLASK_ENV=production
-SECRET_KEY=change_me_to_a_secure_random_value
-CSRF_SECRET=change_me_to_another_secure_random_value
-JWT_SECRET=change_me_to_a_jwt_secret
+SECRET_KEY=xF83kKaP4Qm92Tz8YhdwB6LrM29nC1vQEj7uSc4V
+CSRF_SECRET=Z82sQp8KeN1rD4pUb6LsJx93TgW7qDaSc0YvJi8M
+JWT_SECRET=Kx93Nc4Tg5Bs1Zp7Vh2Rf8LdW0QaYc6Pm3UtSx9E
 
 # Database
-DATABASE_URL=postgresql://flavour_quest_postgres_user:zW1QwYAgcSOxhy3WrJMAclaoE2s84ZqW@dpg-d4anmt63jp1c73e8bulg-a.oregon-postgres.render.com/flavour_quest_postgres
+DATABASE_URL=postgres://flavour_quest_postgres_user:zW1QwYAgcSOxhy3WrJMAclaoE2s84ZqW@dpg-d4anmt63jp1c73e8bulg-a.oregon-postgres.render.com:5432/flavour_quest_postgres
 
 # Security / Rate Limiting
 RATE_LIMIT_MAX_REQUESTS=100
 RATE_LIMIT_WINDOW=3600
 
 # Google Places API
-GOOGLE_API_KEY=your_google_places_api_key
+GOOGLE_API_KEY=AIzaSyBZUCatkclEyKXH5yC4OjYKxri0-RqtJ6c
 
 # Allowed Origins (comma separated)
-CORS_ALLOWED_ORIGINS=https://your-netlify-domain.netlify.app
+CORS_ALLOWED_ORIGINS=https://flavourquestcap.netlify.app
 
 # Optional: Logging / Debug
 LOG_LEVEL=INFO
-
