--- a/backend/env.example
+++ b/backend/env.example
@@ -12,10 +12,10 @@ RATE_LIMIT_MAX_REQUESTS=100
 RATE_LIMIT_WINDOW=3600
 
 # Google Places API
-GOOGLE_API_KEY=AIzaSyBZUCatkclEyKXH5yC4OjYKxri0-RqtJ6c
+GOOGLE_MAPS_API_KEY=AIzaSyBZUCatkclEyKXH5yC4OjYKxri0-RqtJ6c
 
-# Allowed Origins (comma separated)
+# CORS (your frontend URL)
 CORS_ALLOWED_ORIGINS=https://flavourquestcap.netlify.app
 
-# Optional: Logging / Debug
+# Logging
 LOG_LEVEL=INFO
